--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:name=".application.WorkoutApplication">
+
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name"
@@ -19,7 +20,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.WorkoutActivity" />
+
+        <activity
+            android:name=".activities.WorkoutActivity"
+            android:label="@string/activity_workout"
+            android:parentActivityName=".activities.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.MainActivity"/>
+        </activity>
+
     </application>
 
 </manifest>
